examples/qasm_dev/syntax_errors/e36.qasm
// missin ID in U

gate u3(theta,phi,lambda) q { U (theta,phi, lambda }


